--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Terry Cole Podcast Studio</title>
 
+  <!-- ===== Open Graph / Social Preview ===== -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Terry Cole Podcast Studio">
+  <meta property="og:description" content="Preserving broadcast legacy through podcasts, archival audio, and recorded storytelling.">
+  <meta property="og:image" content="https://49fd6m92vc-code.github.io/4635E4AE-C198-45AF-A819-AF3E175E4EAF.png">
+  <meta property="og:url" content="https://49fd6m92vc-code.github.io/">
+  <meta property="og:site_name" content="Terry Cole Podcast Studio">
+
+  <!-- Twitter / X -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Terry Cole Podcast Studio">
+  <meta name="twitter:description" content="Preserving broadcast legacy through podcasts, archival audio, and recorded storytelling.">
+  <meta name="twitter:image" content="https://49fd6m92vc-code.github.io/4635E4AE-C198-45AF-A819-AF3E175E4EAF.png">
+
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico">
+
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
@@ -97,29 +114,30 @@
       font-size: 14px;
       color: #555;
     }
+
     @media (max-width: 640px) {
-  .branding {
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    gap: 8px;
-  }
+      .branding {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        gap: 8px;
+      }
 
-  .site-logo {
-    width: 72px; /* slightly larger on mobile for readability */
-  }
+      .site-logo {
+        width: 72px;
+      }
 
-  .site-title h1 {
-    font-size: 18px;
-  }
+      .site-title h1 {
+        font-size: 18px;
+      }
 
-  .site-parent {
-    font-size: 13px;
-  }
-}
+      .site-parent {
+        font-size: 13px;
+      }
+    }
   </style>
 </head>
-<link rel="icon" href="/favicon1.ico">
+
 <body>
   <div class="container">
 
@@ -127,10 +145,10 @@
     <header class="site-header">
       <div class="branding">
         <img
-  src="/terrycolepodcaststudio/B61D4C48-ABBD-4DDF-BF72-FB14FDD7C294.jpeg"
-  alt="Terry Cole Podcast Studio logo"
-  class="site-logo"
-/>
+          src="/terrycolepodcaststudio/B61D4C48-ABBD-4DDF-BF72-FB14FDD7C294.jpeg"
+          alt="Terry Cole Podcast Studio logo"
+          class="site-logo"
+        />
         <div class="site-title">
           <h1>Terry Cole Podcast Studio</h1>
           <p class="site-parent">
@@ -193,19 +211,19 @@
 
     <!-- Footer -->
     <footer>
-  <p>
-  <em>Broadcast legacy. Recorded with care.</em><br>
-  Studio updates and related materials are occasionally shared on
-  <a href="https://www.facebook.com/TerryColePodcastStudio" target="_blank" rel="noopener">
-    Facebook
-  </a>.
-</p>
+      <p>
+        <em>Broadcast legacy. Recorded with care.</em><br>
+        Studio updates and related materials are occasionally shared on
+        <a href="https://www.facebook.com/TerryColePodcastStudio" target="_blank" rel="noopener">
+          Facebook
+        </a>.
+      </p>
 
-  <p>
-    © Terry Cole Podcast Studio<br>
-    Part of the Terry Cole Broadcast &amp; Recording Studio
-  </p>
-</footer>
+      <p>
+        © Terry Cole Podcast Studio<br>
+        Part of the Terry Cole Broadcast &amp; Recording Studio
+      </p>
+    </footer>
 
   </div>
 </body>
