--- a/about.html
+++ b/about.html
@@ -5,6 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>About · Terry Cole Podcast Studio</title>
 
+  <!-- ===== Open Graph / Social Preview ===== -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="About · Terry Cole Podcast Studio">
+  <meta property="og:description" content="Learn about the Terry Cole Podcast Studio and its mission to preserve broadcast legacy through podcasts and recorded storytelling.">
+  <meta property="og:image" content="https://49fd6m92vc-code.github.io/4635E4AE-C198-45AF-A819-AF3E175E4EAF.png">
+  <meta property="og:url" content="https://49fd6m92vc-code.github.io/about.html">
+  <meta property="og:site_name" content="Terry Cole Podcast Studio">
+
+  <!-- Twitter / X -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="About · Terry Cole Podcast Studio">
+  <meta name="twitter:description" content="Learn about the Terry Cole Podcast Studio and its mission to preserve broadcast legacy through podcasts and recorded storytelling.">
+  <meta name="twitter:image" content="https://49fd6m92vc-code.github.io/4635E4AE-C198-45AF-A819-AF3E175E4EAF.png">
+
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
@@ -180,19 +194,19 @@
 
     <!-- Footer -->
     <footer>
-  <p>
-  <em>Broadcast legacy. Recorded with care.</em><br>
-  Studio updates and related materials are occasionally shared on
-  <a href="https://www.facebook.com/TerryColePodcastStudio" target="_blank" rel="noopener">
-    Facebook
-  </a>.
-</p>
+      <p>
+        <em>Broadcast legacy. Recorded with care.</em><br>
+        Studio updates and related materials are occasionally shared on
+        <a href="https://www.facebook.com/TerryColePodcastStudio" target="_blank" rel="noopener">
+          Facebook
+        </a>.
+      </p>
 
-  <p>
-    © Terry Cole Podcast Studio<br>
-    Part of the Terry Cole Broadcast &amp; Recording Studio
-  </p>
-</footer>
+      <p>
+        © Terry Cole Podcast Studio<br>
+        Part of the Terry Cole Broadcast &amp; Recording Studio
+      </p>
+    </footer>
 
   </div>
 </body>
