--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact · Terry Cole Podcast Studio</title>
 
+  <!-- ===== Open Graph / Social Preview ===== -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Contact · Terry Cole Podcast Studio">
+  <meta property="og:description" content="Get in touch regarding audio projects, archival materials, and broadcast history connected to the Terry Cole Podcast Studio.">
+  <meta property="og:image" content="https://49fd6m92vc-code.github.io/4635E4AE-C198-45AF-A819-AF3E175E4EAF.png">
+  <meta property="og:url" content="https://49fd6m92vc-code.github.io/contact.html">
+  <meta property="og:site_name" content="Terry Cole Podcast Studio">
+
+  <!-- Twitter / X -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Contact · Terry Cole Podcast Studio">
+  <meta name="twitter:description" content="Get in touch regarding audio projects, archival materials, and broadcast history connected to the Terry Cole Podcast Studio.">
+  <meta name="twitter:image" content="https://49fd6m92vc-code.github.io/4635E4AE-C198-45AF-A819-AF3E175E4EAF.png">
+
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
@@ -130,7 +144,7 @@
 <body>
 <div class="container">
 
-  <!-- ===== HEADER (EXACT MATCH TO HOMEPAGE) ===== -->
+  <!-- ===== HEADER ===== -->
   <header class="site-header">
     <div class="branding">
       <img
@@ -196,21 +210,21 @@
   </main>
 
   <!-- Footer -->
-    <footer>
-  <p>
-  <em>Broadcast legacy. Recorded with care.</em><br>
-  Studio updates and related materials are occasionally shared on
-  <a href="https://www.facebook.com/TerryColePodcastStudio" target="_blank" rel="noopener">
-    Facebook
-  </a>.
-</p>
+  <footer>
+    <p>
+      <em>Broadcast legacy. Recorded with care.</em><br>
+      Studio updates and related materials are occasionally shared on
+      <a href="https://www.facebook.com/TerryColePodcastStudio" target="_blank" rel="noopener">
+        Facebook
+      </a>.
+    </p>
 
-  <p>
-    © Terry Cole Podcast Studio<br>
-    Part of the Terry Cole Broadcast &amp; Recording Studio
-  </p>
-</footer>
+    <p>
+      © Terry Cole Podcast Studio<br>
+      Part of the Terry Cole Broadcast &amp; Recording Studio
+    </p>
+  </footer>
 
-  </div>
+</div>
 </body>
 </html>
