--- a/about.html
+++ b/about.html
@@ -9,15 +9,15 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="About · Terry Cole Podcast Studio">
   <meta property="og:description" content="Learn about the Terry Cole Podcast Studio and its mission to preserve broadcast legacy through podcasts and recorded storytelling.">
-  <meta property="og:image" content="https://49fd6m92vc-code.github.io/4635E4AE-C198-45AF-A819-AF3E175E4EAF.png">
-  <meta property="og:url" content="https://49fd6m92vc-code.github.io/about.html">
+  <meta property="og:image" content="https://terrycolepodcaststudio.com/og-image.png">
+  <meta property="og:url" content="https://terrycolepodcaststudio.com/about.html">
   <meta property="og:site_name" content="Terry Cole Podcast Studio">
 
   <!-- Twitter / X -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="About · Terry Cole Podcast Studio">
   <meta name="twitter:description" content="Learn about the Terry Cole Podcast Studio and its mission to preserve broadcast legacy through podcasts and recorded storytelling.">
-  <meta name="twitter:image" content="https://49fd6m92vc-code.github.io/4635E4AE-C198-45AF-A819-AF3E175E4EAF.png">
+  <meta name="twitter:image" content="https://terrycolepodcaststudio.com/og-image.png">
 
   <style>
     body {
@@ -35,7 +35,7 @@
       padding: 32px 24px;
     }
 
-    /* ===== HEADER (IDENTICAL TO HOMEPAGE) ===== */
+    /* ===== HEADER ===== */
     .site-header {
       margin-bottom: 40px;
     }
@@ -64,7 +64,7 @@
       color: #555;
     }
 
-    /* Navigation — DO NOT CENTER */
+    /* Navigation */
     .site-nav a {
       text-decoration: none;
       color: #555;
@@ -103,7 +103,7 @@
       color: #555;
     }
 
-    /* Mobile — SAME AS HOMEPAGE */
+    /* Mobile */
     @media (max-width: 640px) {
       .branding {
         flex-direction: column;
@@ -130,11 +130,11 @@
 <body>
   <div class="container">
 
-    <!-- HEADER (COPIED VERBATIM FROM HOMEPAGE) -->
+    <!-- HEADER -->
     <header class="site-header">
       <div class="branding">
         <img
-          src="/terrycolepodcaststudio/B61D4C48-ABBD-4DDF-BF72-FB14FDD7C294.jpeg"
+          src="/logo.jpg"
           alt="Terry Cole Podcast Studio logo"
           class="site-logo"
         />
@@ -147,10 +147,10 @@
       </div>
 
       <nav class="site-nav">
-        <a href="/terrycolepodcaststudio/">Home</a>
-        <a href="/terrycolepodcaststudio/about.html" class="active">About</a>
-        <a href="/terrycolepodcaststudio/shows.html">Shows</a>
-        <a href="/terrycolepodcaststudio/contact.html">Contact</a>
+        <a href="/">Home</a>
+        <a href="/about.html" class="active">About</a>
+        <a href="/shows.html">Shows</a>
+        <a href="/contact.html">Contact</a>
       </nav>
     </header>
 
@@ -172,11 +172,9 @@
       </p>
 
       <p>
-        The Terry Cole Podcast Studio is dedicated to preserving and sharing the
+        Based in Ohio, the studio is dedicated to preserving and sharing the
         legacy of broadcaster Terry Cole through podcasts, recorded audio
-        projects, and archival storytelling. Based in Ohio, the studio serves as
-        a home for meaningful conversations, historical audio, and voices worth
-        remembering.
+        projects, and archival storytelling.
       </p>
 
       <div class="callout">
@@ -192,7 +190,7 @@
       </p>
     </main>
 
-    <!-- Footer -->
+    <!-- FOOTER -->
     <footer>
       <p>
         <em>Broadcast legacy. Recorded with care.</em><br>
