--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Terry Cole Podcast Studio">
   <meta property="og:description" content="Preserving broadcast legacy through podcasts, archival audio, and recorded storytelling.">
-  <meta property="og:image" content="https://49fd6m92vc-code.github.io/4635E4AE-C198-45AF-A819-AF3E175E4EAF.png">
-  <meta property="og:url" content="https://49fd6m92vc-code.github.io/">
+  <meta property="og:image" content="https://terrycolepodcaststudio.com/og-image.png">
+  <meta property="og:url" content="https://terrycolepodcaststudio.com/">
   <meta property="og:site_name" content="Terry Cole Podcast Studio">
 
   <!-- Twitter / X -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Terry Cole Podcast Studio">
   <meta name="twitter:description" content="Preserving broadcast legacy through podcasts, archival audio, and recorded storytelling.">
-  <meta name="twitter:image" content="https://49fd6m92vc-code.github.io/4635E4AE-C198-45AF-A819-AF3E175E4EAF.png">
+  <meta name="twitter:image" content="https://terrycolepodcaststudio.com/og-image.png">
 
   <!-- Favicon -->
   <link rel="icon" href="/favicon.ico">
@@ -145,7 +145,7 @@
     <header class="site-header">
       <div class="branding">
         <img
-          src="/terrycolepodcaststudio/B61D4C48-ABBD-4DDF-BF72-FB14FDD7C294.jpeg"
+          src="/logo.jpg"
           alt="Terry Cole Podcast Studio logo"
           class="site-logo"
         />
@@ -158,10 +158,10 @@
       </div>
 
       <nav class="site-nav">
-        <a href="/terrycolepodcaststudio/" class="active">Home</a>
-        <a href="/terrycolepodcaststudio/about.html">About</a>
-        <a href="/terrycolepodcaststudio/shows.html">Shows</a>
-        <a href="/terrycolepodcaststudio/contact.html">Contact</a>
+        <a href="/" class="active">Home</a>
+        <a href="/about.html">About</a>
+        <a href="/shows.html">Shows</a>
+        <a href="/contact.html">Contact</a>
       </nav>
     </header>
 
