--- a/shows.html
+++ b/shows.html
@@ -9,15 +9,18 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Shows · Terry Cole Podcast Studio">
   <meta property="og:description" content="Listen to podcasts and audio projects produced by the Terry Cole Podcast Studio, hosted on iHeart and presented with embedded playback.">
-  <meta property="og:image" content="https://49fd6m92vc-code.github.io/4635E4AE-C198-45AF-A819-AF3E175E4EAF.png">
-  <meta property="og:url" content="https://49fd6m92vc-code.github.io/shows.html">
+  <meta property="og:image" content="https://terrycolepodcaststudio.com/og-image.png">
+  <meta property="og:url" content="https://terrycolepodcaststudio.com/shows.html">
   <meta property="og:site_name" content="Terry Cole Podcast Studio">
 
   <!-- Twitter / X -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Shows · Terry Cole Podcast Studio">
   <meta name="twitter:description" content="Listen to podcasts and audio projects produced by the Terry Cole Podcast Studio, hosted on iHeart and presented with embedded playback.">
-  <meta name="twitter:image" content="https://49fd6m92vc-code.github.io/4635E4AE-C198-45AF-A819-AF3E175E4EAF.png">
+  <meta name="twitter:image" content="https://terrycolepodcaststudio.com/og-image.png">
+
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico">
 
   <style>
     body {
@@ -35,7 +38,7 @@
       padding: 32px 24px;
     }
 
-    /* ===== HEADER (EXACT HOMEPAGE COPY) ===== */
+    /* ===== HEADER ===== */
     .site-header {
       margin-bottom: 40px;
     }
@@ -158,7 +161,119 @@
 
 <body>
 <div class="container">
-  <!-- HEADER, CONTENT, FOOTER UNCHANGED -->
+
+  <!-- ===== HEADER ===== -->
+  <header class="site-header">
+    <div class="branding">
+      <img
+        src="/logo.jpg"
+        alt="Terry Cole Podcast Studio logo"
+        class="site-logo"
+      />
+      <div class="site-title">
+        <h1>Terry Cole Podcast Studio</h1>
+        <p class="site-parent">
+          Part of the Terry Cole Broadcast &amp; Recording Studio
+        </p>
+      </div>
+    </div>
+
+    <nav class="site-nav">
+      <a href="/">Home</a>
+      <a href="/about.html">About</a>
+      <a href="/shows.html" class="active">Shows</a>
+      <a href="/contact.html">Contact</a>
+    </nav>
+  </header>
+
+  <!-- ===== MAIN ===== -->
+  <main>
+    <h2>Shows &amp; Audio Projects</h2>
+    <div class="rule"></div>
+
+    <p>
+      The Terry Cole Podcast Studio is home to podcasts and recorded audio projects
+      produced by the Terry Cole Broadcast &amp; Recording Studio.
+    </p>
+
+    <p>
+      All programs are officially hosted on <strong>iHeart</strong> and are presented
+      here for direct listening.
+    </p>
+
+    <!-- SHOWS -->
+
+    <div class="show">
+      <h3>🎙️ Terry Cole’s Audio Archives</h3>
+      <div class="listen-links">
+        <a href="https://www.iheart.com/podcast/53-terry-coles-audio-archives-102630732"
+           target="_blank" rel="noopener">Listen on iHeart</a>
+      </div>
+      <iframe src="https://widget.spreaker.com/player?show_id=5365299&theme=light&playlist=show&hide-logo=true"
+              width="100%" height="350"></iframe>
+    </div>
+
+    <div class="show">
+      <h3>🎧 OSSB Inside and Out</h3>
+      <div class="listen-links">
+        <a href="https://www.iheart.com/podcast/1248-ossb-inside-and-out-54604516"
+           target="_blank" rel="noopener">Listen on iHeart</a>
+      </div>
+      <iframe src="https://widget.spreaker.com/player?show_id=4120454&theme=light&playlist=show&hide-logo=true"
+              width="100%" height="350"></iframe>
+    </div>
+
+    <div class="show">
+      <h3>🎚️ Brendon Hamblin’s Audio Projects</h3>
+      <iframe src="https://widget.spreaker.com/player?show_id=4664315&theme=light&playlist=show&hide-logo=true"
+              width="100%" height="350"></iframe>
+    </div>
+
+    <div class="show">
+      <h3>🎤 Andy &amp; Steph’s Top Ten Podcast</h3>
+      <div class="listen-links">
+        <a href="https://www.iheart.com/podcast/53-andy-stephs-top-ten-podcast-85580398"
+           target="_blank" rel="noopener">Listen on iHeart</a>
+      </div>
+      <iframe src="https://widget.spreaker.com/player?show_id=5020228&theme=light&playlist=show&hide-logo=true"
+              width="100%" height="350"></iframe>
+    </div>
+
+    <div class="show">
+      <h3>🎙️ The Andy &amp; Brendon Podcast</h3>
+      <div class="listen-links">
+        <a href="https://www.iheart.com/podcast/74317125"
+           target="_blank" rel="noopener">Listen on iHeart</a>
+      </div>
+      <iframe src="https://widget.spreaker.com/player?show_id=4580634&theme=light&playlist=show&hide-logo=true"
+              width="100%" height="350"></iframe>
+    </div>
+
+    <div class="about-playback">
+      <h3>About Playback</h3>
+      <ul>
+        <li>Players update automatically as new episodes are published</li>
+        <li>Playback is provided directly by Spreaker</li>
+        <li>Hosting and distribution remain under the iHeart network</li>
+      </ul>
+    </div>
+  </main>
+
+  <!-- ===== FOOTER ===== -->
+  <footer>
+    <p>
+      <em>Broadcast legacy. Recorded with care.</em><br>
+      Studio updates and related materials are occasionally shared on
+      <a href="https://www.facebook.com/TerryColePodcastStudio"
+         target="_blank" rel="noopener">Facebook</a>.
+    </p>
+
+    <p>
+      © Terry Cole Podcast Studio<br>
+      Part of the Terry Cole Broadcast &amp; Recording Studio
+    </p>
+  </footer>
+
 </div>
 </body>
 </html>
