--- a/contact.html
+++ b/contact.html
@@ -9,15 +9,18 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Contact · Terry Cole Podcast Studio">
   <meta property="og:description" content="Get in touch regarding audio projects, archival materials, and broadcast history connected to the Terry Cole Podcast Studio.">
-  <meta property="og:image" content="https://49fd6m92vc-code.github.io/4635E4AE-C198-45AF-A819-AF3E175E4EAF.png">
-  <meta property="og:url" content="https://49fd6m92vc-code.github.io/contact.html">
+  <meta property="og:image" content="https://terrycolepodcaststudio.com/og-image.png">
+  <meta property="og:url" content="https://terrycolepodcaststudio.com/contact.html">
   <meta property="og:site_name" content="Terry Cole Podcast Studio">
 
   <!-- Twitter / X -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Contact · Terry Cole Podcast Studio">
   <meta name="twitter:description" content="Get in touch regarding audio projects, archival materials, and broadcast history connected to the Terry Cole Podcast Studio.">
-  <meta name="twitter:image" content="https://49fd6m92vc-code.github.io/4635E4AE-C198-45AF-A819-AF3E175E4EAF.png">
+  <meta name="twitter:image" content="https://terrycolepodcaststudio.com/og-image.png">
+
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico">
 
   <style>
     body {
@@ -35,7 +38,7 @@
       padding: 32px 24px;
     }
 
-    /* ===== HEADER (COPIED EXACTLY FROM HOMEPAGE) ===== */
+    /* ===== HEADER ===== */
     .site-header {
       margin-bottom: 40px;
     }
@@ -76,7 +79,7 @@
       font-weight: 600;
     }
 
-    /* ===== PAGE CONTENT ===== */
+    /* ===== CONTENT ===== */
     h2 {
       font-size: 28px;
       margin-top: 0;
@@ -117,7 +120,7 @@
       color: #555;
     }
 
-    /* ===== MOBILE (SAME AS HOMEPAGE) ===== */
+    /* ===== MOBILE ===== */
     @media (max-width: 640px) {
       .branding {
         flex-direction: column;
@@ -148,7 +151,7 @@
   <header class="site-header">
     <div class="branding">
       <img
-        src="/terrycolepodcaststudio/B61D4C48-ABBD-4DDF-BF72-FB14FDD7C294.jpeg"
+        src="/logo.jpg"
         alt="Terry Cole Podcast Studio logo"
         class="site-logo"
       />
@@ -161,70 +164,6 @@
     </div>
 
     <nav class="site-nav">
-      <a href="/terrycolepodcaststudio/">Home</a>
-      <a href="/terrycolepodcaststudio/about.html">About</a>
-      <a href="/terrycolepodcaststudio/shows.html">Shows</a>
-      <a href="/terrycolepodcaststudio/contact.html" class="active">Contact</a>
-    </nav>
-  </header>
-
-  <!-- ===== MAIN CONTENT ===== -->
-  <main>
-    <h2>Contact</h2>
-    <div class="rule"></div>
-
-    <p>
-      The Terry Cole Podcast Studio welcomes inquiries related to its audio projects,
-      archival materials, and broadcast history.
-    </p>
-
-    <h3>📬 Get in Touch</h3>
-
-    <div class="callout">
-      <strong>Website</strong><br>
-      <a href="https://terrycolepodcaststudio.com">
-        https://terrycolepodcaststudio.com
-      </a>
-      <br><br>
-      <strong>Email</strong><br>
-      <a href="mailto:bhamblin@terrycolepodcaststudio.com">
-        bhamblin@terrycolepodcaststudio.com
-      </a>
-    </div>
-
-    <h3>🎙️ Submissions &amp; Inquiries</h3>
-
-    <p>If you have:</p>
-    <ul>
-      <li>Historical recordings or broadcast materials related to Terry Cole</li>
-      <li>Information supporting preservation of radio history</li>
-      <li>Questions about existing audio projects</li>
-    </ul>
-
-    <p>Please reach out by email. All messages are reviewed.</p>
-
-    <h3>📍 Location</h3>
-    <p>
-      The Terry Cole Podcast Studio is based in <strong>Ohio, United States</strong>.
-    </p>
-  </main>
-
-  <!-- Footer -->
-  <footer>
-    <p>
-      <em>Broadcast legacy. Recorded with care.</em><br>
-      Studio updates and related materials are occasionally shared on
-      <a href="https://www.facebook.com/TerryColePodcastStudio" target="_blank" rel="noopener">
-        Facebook
-      </a>.
-    </p>
-
-    <p>
-      © Terry Cole Podcast Studio<br>
-      Part of the Terry Cole Broadcast &amp; Recording Studio
-    </p>
-  </footer>
-
-</div>
-</body>
-</html>
+      <a href="/">Home</a>
+      <a href="/about.html">About</a>
+      <a href="/shows.html">
