--- a/contact.html
+++ b/contact.html
@@ -166,4 +166,68 @@
     <nav class="site-nav">
       <a href="/">Home</a>
       <a href="/about.html">About</a>
-      <a href="/shows.html">
+      <a href="/shows.html">Shows</a>
+      <a href="/contact.html" class="active">Contact</a>
+    </nav>
+  </header>
+
+  <!-- ===== MAIN CONTENT ===== -->
+  <main>
+    <h2>Contact</h2>
+    <div class="rule"></div>
+
+    <p>
+      The Terry Cole Podcast Studio welcomes inquiries related to audio projects,
+      archival materials, and broadcast history.
+    </p>
+
+    <h3>📬 Get in Touch</h3>
+
+    <div class="callout">
+      <strong>Website</strong><br>
+      <a href="https://terrycolepodcaststudio.com">
+        https://terrycolepodcaststudio.com
+      </a>
+      <br><br>
+      <strong>Email</strong><br>
+      <a href="mailto:bhamblin@terrycolepodcaststudio.com">
+        bhamblin@terrycolepodcaststudio.com
+      </a>
+    </div>
+
+    <h3>🎙️ Submissions &amp; Inquiries</h3>
+
+    <p>If you have:</p>
+    <ul>
+      <li>Historical recordings or broadcast materials related to Terry Cole</li>
+      <li>Information supporting preservation of radio history</li>
+      <li>Questions about existing audio projects</li>
+    </ul>
+
+    <p>Please reach out by email. All messages are reviewed.</p>
+
+    <h3>📍 Location</h3>
+    <p>
+      The Terry Cole Podcast Studio is based in <strong>Ohio, United States</strong>.
+    </p>
+  </main>
+
+  <!-- ===== FOOTER ===== -->
+  <footer>
+    <p>
+      <em>Broadcast legacy. Recorded with care.</em><br>
+      Studio updates and related materials are occasionally shared on
+      <a href="https://www.facebook.com/TerryColePodcastStudio" target="_blank" rel="noopener">
+        Facebook
+      </a>.
+    </p>
+
+    <p>
+      © Terry Cole Podcast Studio<br>
+      Part of the Terry Cole Broadcast &amp; Recording Studio
+    </p>
+  </footer>
+
+</div>
+</body>
+</html>
