--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
       padding: 32px 24px;
     }
 
-    /* Header */
     .site-header {
       margin-bottom: 40px;
     }
@@ -66,7 +65,6 @@
       color: #555;
     }
 
-    /* Navigation */
     .site-nav a {
       text-decoration: none;
       color: #555;
@@ -79,7 +77,6 @@
       font-weight: 600;
     }
 
-    /* Headings */
     h2 {
       font-size: 28px;
       margin-top: 0;
@@ -90,7 +87,6 @@
       margin: 12px 0 24px;
     }
 
-    /* Callout */
     .callout {
       border-left: 4px solid #8b0000;
       background: #f7f7f7;
@@ -98,7 +94,6 @@
       margin: 32px 0;
     }
 
-    /* Lists */
     ul {
       padding-left: 20px;
     }
@@ -141,7 +136,6 @@
 <body>
   <div class="container">
 
-    <!-- Header -->
     <header class="site-header">
       <div class="branding">
         <img
@@ -165,7 +159,6 @@
       </nav>
     </header>
 
-    <!-- Main Content -->
     <main>
       <h2>Preserving Broadcast Legacy</h2>
       <div class="rule"></div>
@@ -205,11 +198,10 @@
       </ul>
 
       <p>
-        Visit the <strong>Shows</strong> page to listen.
+        Visit the <strong><a href="/shows.html">Shows</a></strong> page to listen.
       </p>
     </main>
 
-    <!-- Footer -->
     <footer>
       <p>
         <em>Broadcast legacy. Recorded with care.</em><br>
