--- a/index.html
+++ b/index.html
@@ -138,18 +138,20 @@
 
     <header class="site-header">
       <div class="branding">
-        <img
-          src="/logo.jpg"
-          alt="Terry Cole Podcast Studio logo"
-          class="site-logo"
-        />
-        <div class="site-title">
-          <h1>Terry Cole Podcast Studio</h1>
-          <p class="site-parent">
-            Part of the Terry Cole Broadcast &amp; Recording Studio
-          </p>
-        </div>
-      </div>
+  <a href="/" style="display:flex; align-items:center; gap:16px; text-decoration:none; color:inherit;">
+    <img
+      src="/logo.jpg"
+      alt="Terry Cole Podcast Studio logo"
+      class="site-logo"
+    />
+    <div class="site-title">
+      <h1>Terry Cole Podcast Studio</h1>
+      <p class="site-parent">
+        Part of the Terry Cole Broadcast &amp; Recording Studio
+      </p>
+    </div>
+  </a>
+</div>
 
       <nav class="site-nav">
         <a href="/" class="active">Home</a>
