--- a/shows.html
+++ b/shows.html
@@ -9,18 +9,15 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Shows · Terry Cole Podcast Studio">
   <meta property="og:description" content="Listen to podcasts and audio projects produced by the Terry Cole Podcast Studio, hosted on iHeart and presented with embedded playback.">
-  <meta property="og:image" content="https://terrycolepodcaststudio.com/og-image.png">
-  <meta property="og:url" content="https://terrycolepodcaststudio.com/shows.html">
+  <meta property="og:image" content="https://49fd6m92vc-code.github.io/4635E4AE-C198-45AF-A819-AF3E175E4EAF.png">
+  <meta property="og:url" content="https://49fd6m92vc-code.github.io/shows.html">
   <meta property="og:site_name" content="Terry Cole Podcast Studio">
 
   <!-- Twitter / X -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Shows · Terry Cole Podcast Studio">
   <meta name="twitter:description" content="Listen to podcasts and audio projects produced by the Terry Cole Podcast Studio, hosted on iHeart and presented with embedded playback.">
-  <meta name="twitter:image" content="https://terrycolepodcaststudio.com/og-image.png">
-
-  <!-- Favicon -->
-  <link rel="icon" href="/favicon.ico">
+  <meta name="twitter:image" content="https://49fd6m92vc-code.github.io/4635E4AE-C198-45AF-A819-AF3E175E4EAF.png">
 
   <style>
     body {
@@ -38,7 +35,7 @@
       padding: 32px 24px;
     }
 
-    /* ===== HEADER ===== */
+    /* ===== HEADER (EXACT HOMEPAGE COPY) ===== */
     .site-header {
       margin-bottom: 40px;
     }
@@ -201,8 +198,6 @@
       here for direct listening.
     </p>
 
-    <!-- SHOWS -->
-
     <div class="show">
       <h3>🎙️ Terry Cole’s Audio Archives</h3>
       <div class="listen-links">
@@ -225,6 +220,10 @@
 
     <div class="show">
       <h3>🎚️ Brendon Hamblin’s Audio Projects</h3>
+      <div class="listen-links">
+        <a href="https://iheart.com/podcast/314657466"
+           target="_blank" rel="noopener">Listen on iHeart</a>
+      </div>
       <iframe src="https://widget.spreaker.com/player?show_id=4664315&theme=light&playlist=show&hide-logo=true"
               width="100%" height="350"></iframe>
     </div>
@@ -242,7 +241,7 @@
     <div class="show">
       <h3>🎙️ The Andy &amp; Brendon Podcast</h3>
       <div class="listen-links">
-        <a href="https://www.iheart.com/podcast/74317125"
+        <a href="https://iheart.com/podcast/74317125"
            target="_blank" rel="noopener">Listen on iHeart</a>
       </div>
       <iframe src="https://widget.spreaker.com/player?show_id=4580634&theme=light&playlist=show&hide-logo=true"
