--- a/shows.html
+++ b/shows.html
@@ -8,7 +8,7 @@
   <!-- ===== Open Graph / Social Preview ===== -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Shows · Terry Cole Podcast Studio">
-  <meta property="og:description" content="Listen to podcasts and audio projects produced by the Terry Cole Podcast Studio, hosted on iHeart and presented with embedded playback.">
+  <meta property="og:description" content="Listen to podcasts and audio projects produced by the Terry Cole Podcast Studio.">
   <meta property="og:image" content="https://terrycolepodcaststudio.com/og-image.png">
   <meta property="og:url" content="https://terrycolepodcaststudio.com/shows.html">
   <meta property="og:site_name" content="Terry Cole Podcast Studio">
@@ -16,7 +16,7 @@
   <!-- Twitter / X -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Shows · Terry Cole Podcast Studio">
-  <meta name="twitter:description" content="Listen to podcasts and audio projects produced by the Terry Cole Podcast Studio, hosted on iHeart and presented with embedded playback.">
+  <meta name="twitter:description" content="Listen to podcasts and audio projects produced by the Terry Cole Podcast Studio.">
   <meta name="twitter:image" content="https://terrycolepodcaststudio.com/og-image.png">
 
   <!-- Favicon -->
@@ -85,12 +85,6 @@
       margin-top: 0;
     }
 
-    h3.section-heading {
-      margin-top: 48px;
-      font-size: 22px;
-      color: #8b0000;
-    }
-
     .rule {
       border-bottom: 3px solid #8b0000;
       margin: 18px 0 32px;
@@ -108,17 +102,6 @@
       color: #8b0000;
       margin-bottom: 6px;
       font-size: 1.35rem;
-    }
-
-    .listen-links {
-      margin: 6px 0 12px;
-      font-size: 0.9rem;
-    }
-
-    .listen-links a {
-      color: #8b0000;
-      text-decoration: none;
-      font-weight: 600;
     }
 
     iframe {
@@ -171,18 +154,12 @@
   <!-- ===== HEADER ===== -->
   <header class="site-header">
     <div class="branding">
-      <a href="/" aria-label="Return to homepage">
-        <img
-          src="/logo.jpg"
-          alt="Terry Cole Podcast Studio logo"
-          class="site-logo"
-        />
+      <a href="/">
+        <img src="/logo.jpg" alt="Terry Cole Podcast Studio logo" class="site-logo" />
       </a>
       <div class="site-title">
-        <h1><a href="/" style="text-decoration:none; color:inherit;">Terry Cole Podcast Studio</a></h1>
-        <p class="site-parent">
-          Part of the Terry Cole Broadcast &amp; Recording Studio
-        </p>
+        <h1><a href="/" style="text-decoration:none;color:inherit;">Terry Cole Podcast Studio</a></h1>
+        <p class="site-parent">Part of the Terry Cole Broadcast &amp; Recording Studio</p>
       </div>
     </div>
 
@@ -204,73 +181,69 @@
       produced by the Terry Cole Broadcast &amp; Recording Studio.
     </p>
 
-    <p>
-      All programs are officially hosted on <strong>iHeart</strong> and are presented
-      here for direct listening.
-    </p>
-
-    <!-- ===== ARCHIVE & LEGACY ===== -->
-    <h3 class="section-heading">Archive &amp; Legacy Programming</h3>
+    <!-- SHOWS -->
 
     <div class="show">
       <h3>🎙️ Terry Cole’s Audio Archives</h3>
-      <div class="listen-links">
-        <a href="https://www.iheart.com/podcast/53-terry-coles-audio-archives-102630732"
-           target="_blank" rel="noopener">Listen on iHeart</a>
-      </div>
-      <iframe src="https://widget.spreaker.com/player?show_id=5365299&theme=light&playlist=show&hide-logo=true"
-              width="100%" height="350"></iframe>
+      <iframe
+        src="https://widget.spreaker.com/player?show_id=5365299&theme=light&playlist=show&playlist-continuous=false&chapters-image=true&episode_image_position=left&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true"
+        width="100%"
+        height="350"
+        title="Terry Cole’s Audio Archives"
+        loading="lazy">
+      </iframe>
     </div>
-
-    <!-- ===== STUDIO PRODUCTIONS ===== -->
-    <h3 class="section-heading">Studio Productions</h3>
 
     <div class="show">
       <h3>🎧 OSSB Inside and Out</h3>
-      <div class="listen-links">
-        <a href="https://www.iheart.com/podcast/1248-ossb-inside-and-out-54604516"
-           target="_blank" rel="noopener">Listen on iHeart</a>
-      </div>
-      <iframe src="https://widget.spreaker.com/player?show_id=4120454&theme=light&playlist=show&hide-logo=true"
-              width="100%" height="350"></iframe>
+      <iframe
+        src="https://widget.spreaker.com/player?show_id=4120454&theme=light&playlist=show&playlist-continuous=false&chapters-image=true&episode_image_position=left&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true"
+        width="100%"
+        height="350"
+        title="OSSB Inside and Out"
+        loading="lazy">
+      </iframe>
     </div>
 
     <div class="show">
       <h3>🎚️ Brendon Hamblin’s Audio Projects</h3>
-      <div class="listen-links">
-        <a href="https://iheart.com/podcast/314657466"
-           target="_blank" rel="noopener">Listen on iHeart</a>
-      </div>
-      <iframe src="https://widget.spreaker.com/player?show_id=4664315&theme=light&playlist=show&hide-logo=true"
-              width="100%" height="350"></iframe>
+      <iframe
+        src="https://widget.spreaker.com/player?show_id=4664315&theme=light&playlist=show&playlist-continuous=false&chapters-image=true&episode_image_position=left&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true"
+        width="100%"
+        height="350"
+        title="Brendon Hamblin’s Audio Projects"
+        loading="lazy">
+      </iframe>
     </div>
 
     <div class="show">
       <h3>🎤 Andy &amp; Steph’s Top Ten Podcast</h3>
-      <div class="listen-links">
-        <a href="https://www.iheart.com/podcast/53-andy-stephs-top-ten-podcast-85580398"
-           target="_blank" rel="noopener">Listen on iHeart</a>
-      </div>
-      <iframe src="https://widget.spreaker.com/player?show_id=5020228&theme=light&playlist=show&hide-logo=true"
-              width="100%" height="350"></iframe>
+      <iframe
+        src="https://widget.spreaker.com/player?show_id=5020228&theme=light&playlist=show&playlist-continuous=false&chapters-image=true&episode_image_position=left&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true"
+        width="100%"
+        height="350"
+        title="Andy &amp; Steph’s Top Ten Podcast"
+        loading="lazy">
+      </iframe>
     </div>
 
     <div class="show">
       <h3>🎙️ The Andy &amp; Brendon Podcast</h3>
-      <div class="listen-links">
-        <a href="https://iheart.com/podcast/74317125"
-           target="_blank" rel="noopener">Listen on iHeart</a>
-      </div>
-      <iframe src="https://widget.spreaker.com/player?show_id=4580634&theme=light&playlist=show&hide-logo=true"
-              width="100%" height="350"></iframe>
+      <iframe
+        src="https://widget.spreaker.com/player?show_id=4580634&theme=light&playlist=show&playlist-continuous=false&chapters-image=true&episode_image_position=left&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true"
+        width="100%"
+        height="350"
+        title="The Andy &amp; Brendon Podcast"
+        loading="lazy">
+      </iframe>
     </div>
 
     <div class="about-playback">
       <h3>About Playback</h3>
       <ul>
         <li>Players update automatically as new episodes are published</li>
-        <li>Playback is provided directly by Spreaker</li>
-        <li>Hosting and distribution remain under the iHeart network</li>
+        <li>Playback is provided via Spreaker</li>
+        <li>Distribution is handled through iHeart</li>
       </ul>
     </div>
   </main>
@@ -280,8 +253,7 @@
     <p>
       <em>Broadcast legacy. Recorded with care.</em><br>
       Studio updates and related materials are occasionally shared on
-      <a href="https://www.facebook.com/TerryColePodcastStudio"
-         target="_blank" rel="noopener">Facebook</a>.
+      <a href="https://www.facebook.com/TerryColePodcastStudio" target="_blank" rel="noopener">Facebook</a>.
     </p>
 
     <p>
