--- a/shows.html
+++ b/shows.html
@@ -53,6 +53,7 @@
     .site-logo {
       width: 64px;
       height: auto;
+      display: block;
     }
 
     .site-title h1 {
@@ -102,6 +103,21 @@
       color: #8b0000;
       margin-bottom: 6px;
       font-size: 1.35rem;
+    }
+
+    .listen-links {
+      margin: 6px 0 12px;
+      font-size: 0.95rem;
+    }
+
+    .listen-links a {
+      color: #8b0000;
+      text-decoration: none;
+      font-weight: 700;
+    }
+
+    .listen-links a:hover {
+      text-decoration: underline;
     }
 
     iframe {
@@ -185,6 +201,10 @@
 
     <div class="show">
       <h3>🎙️ Terry Cole’s Audio Archives</h3>
+      <div class="listen-links">
+        <a href="https://www.iheart.com/podcast/53-terry-coles-audio-archives-102630732"
+           target="_blank" rel="noopener">Listen on iHeart</a>
+      </div>
       <iframe
         src="https://widget.spreaker.com/player?show_id=5365299&theme=light&playlist=show&playlist-continuous=false&chapters-image=true&episode_image_position=left&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true"
         width="100%"
@@ -196,6 +216,10 @@
 
     <div class="show">
       <h3>🎧 OSSB Inside and Out</h3>
+      <div class="listen-links">
+        <a href="https://www.iheart.com/podcast/1248-ossb-inside-and-out-54604516"
+           target="_blank" rel="noopener">Listen on iHeart</a>
+      </div>
       <iframe
         src="https://widget.spreaker.com/player?show_id=4120454&theme=light&playlist=show&playlist-continuous=false&chapters-image=true&episode_image_position=left&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true"
         width="100%"
@@ -207,6 +231,10 @@
 
     <div class="show">
       <h3>🎚️ Brendon Hamblin’s Audio Projects</h3>
+      <div class="listen-links">
+        <a href="https://iheart.com/podcast/314657466"
+           target="_blank" rel="noopener">Listen on iHeart</a>
+      </div>
       <iframe
         src="https://widget.spreaker.com/player?show_id=4664315&theme=light&playlist=show&playlist-continuous=false&chapters-image=true&episode_image_position=left&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true"
         width="100%"
@@ -218,6 +246,10 @@
 
     <div class="show">
       <h3>🎤 Andy &amp; Steph’s Top Ten Podcast</h3>
+      <div class="listen-links">
+        <a href="https://www.iheart.com/podcast/53-andy-stephs-top-ten-podcast-85580398"
+           target="_blank" rel="noopener">Listen on iHeart</a>
+      </div>
       <iframe
         src="https://widget.spreaker.com/player?show_id=5020228&theme=light&playlist=show&playlist-continuous=false&chapters-image=true&episode_image_position=left&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true"
         width="100%"
@@ -229,6 +261,10 @@
 
     <div class="show">
       <h3>🎙️ The Andy &amp; Brendon Podcast</h3>
+      <div class="listen-links">
+        <a href="https://iheart.com/podcast/74317125"
+           target="_blank" rel="noopener">Listen on iHeart</a>
+      </div>
       <iframe
         src="https://widget.spreaker.com/player?show_id=4580634&theme=light&playlist=show&playlist-continuous=false&chapters-image=true&episode_image_position=left&hide-logo=true&hide-likes=true&hide-comments=true&hide-sharing=true&hide-download=true"
         width="100%"
